# libHttpClient

./: libHttpClient.vs2019.sln
Include/httpClient/: httpClient.h  pal.h
Source/HTTP/: httpcall.cpp  httpcall.h  httpcall_intermediate_context.cpp  httpcall_request.cpp
Source/HTTP/WinHttp/: winhttp_http_task.cpp  winhttp_http_task.h
Utilities/CMake/: CMakeLists.txt  GetCommonHCSourceFiles.cmake
largefiletest/LargeFileTest/: CMakeLists.txt  CMakeSettings.json  LargeFileTest.cpp
